# video_duration_adjuster

./: .gitignore  README.md  plan.md  pyproject.toml  reflex_rerun.sh  requirements.txt  rxconfig.py
scripts/: apple_ai_metal_vfi.py  apple_vfi_backend.swift  apple_vfi_runner.py  setup_rife_model.py
video_duration_adjuster/: video_duration_adjuster.py
video_duration_adjuster/components/: navbar.py  time_controls.py  upload_zone.py  video_preview.py
video_duration_adjuster/states/: video_state.py
